Fix social__list width on tablet

--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -11,6 +11,7 @@
 
   @include md-size {
     margin: 0;
+    width: 200px;
   }
 }
 
